// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabButton renders selected button with size medium 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "borderBottomColor": "#7335C0",
      "borderBottomWidth": 2,
      "justifyContent": "center",
      "opacity": 1,
      "padding": 12,
    }
  }
  testID="hometab-selected"
>
  <Text
    style={
      Array [
        Object {
          "color": "#353E6E",
          "fontFamily": "BeVietnamPro-Medium",
          "fontSize": 13,
        },
        Object {
          "color": "#7335C0",
        },
        undefined,
      ]
    }
  >
    Tab button
  </Text>
</View>
`;

exports[`TabButton renders unselected button with size large 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "borderBottomColor": "#353E6E",
      "borderBottomWidth": null,
      "justifyContent": "center",
      "opacity": 1,
      "padding": 12,
    }
  }
  testID="hometab-notselected"
>
  <Text
    style={
      Array [
        Object {
          "color": "#353E6E",
          "fontFamily": "BeVietnamPro-Medium",
          "fontSize": 15,
        },
        Object {
          "color": "#353E6E",
        },
        undefined,
      ]
    }
  >
    Tab button
  </Text>
</View>
`;
